--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
-  "name": "nyt-search",
+  "name": "nytreact",
   "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "client": "cd client && yarn start",
-    "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+      "server": "node server.js",
+      "client": "node scripts/start-client.js",
+      "start": "concurrently \"nodemon server.js\" \"npm run client\"",
+      "build": "node scripts/build.js",
+      "seed": "node scripts/seedDB.js",
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "installDeps": "yarn && cd client && yarn",
+      "prepare": "cd client && yarn install && yarn build"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+      "concurrently": "^3.5.1",
+      "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "express": "^4.16.3"
+      "axios": "^0.16.2",
+      "body-parser": "^1.17.2",
+      "express": "^4.15.4",
+      "mongoose": "^5.0.11"
   },
-  "devDependencies": {
-    "concurrently": "^3.5.0"
+  "engines": {
+      "node": "8.9.4"
   }
 }
